# OpinionTrade

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_bot.py
data/: orderbook_snapshots.csv
input_data/: proxies.txt.example  wallets.txt.example
logs/: .gitkeep
src/: __init__.py  bot.py  config_loader.py  liquidator.py  market_selection.py  opinion_client.py  strategy.py
src/ml/: __init__.py  dataset.py  features.py  metrics.md  model.py  ranker.py  train.py
src/ml/artifacts/: fill_model.joblib
src/utils/: __init__.py  logging_utils.py
tests/: conftest.py  test_dataset.py  test_features.py  test_model.py  test_ranker.py
