[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opiniontrade"
version = "0.2.0"
description = "Pegged limit-order trading bot for Opinion.trade, with an ML fill-probability execution policy."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "colorama>=0.4.6",
    "web3>=6.0.0",
    "PySocks>=1.7.1",
]

[project.optional-dependencies]
# Optional machine-learning layer (src/ml). The core bot runs without these.
ml = [
    "pandas>=2.0,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.3,<2",
    "joblib>=1.3,<2",
]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
    "mypy>=1.8,<2",
    "pandas-stubs>=2.0",
]

[tool.setuptools]
packages = ["src", "src.ml", "src.utils"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src/ml"]
follow_imports = "silent"
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
